fixed nav sticky gap

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -6,4 +6,5 @@
     position: sticky;
     top: 0;
     z-index: 999;
+    background-color: #4d4e50;
 }
