--- a/css/variables.css
+++ b/css/variables.css
@@ -8,7 +8,7 @@
     --blue: #6E8898;
     --purple: #6a00b2;
     --brown: #8c7a51;
-    --gray: #40404f;
+    --gray: #4d4e50;
     --black: #0f1113;
     --personal: #f9b62d;
     --light-gray:#e6e7e8;
